<resources>
    <string name="app_name">Simple Math Quiz</string>
    <string name="first_num">First Num</string>
    <string name="second_num">Second Num</string>
    <string name="operators">+ - * /</string>
    <string name="answer">""</string>

    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>

</resources>
