<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="joshuaj004.com.simplemathquiz.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/first_num"
            android:id="@+id/firstNum"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/answer"
            android:id="@+id/answer"
            android:gravity="center"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="10"
            android:layout_column="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:onClick="submit" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:onClick="submit" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:id="@+id/button3"
                android:layout_gravity="center_horizontal"
                android:onClick="submit" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4"
                android:id="@+id/button4"
                android:layout_gravity="center_horizontal"
                android:onClick="submit" />
        </LinearLayout>

    </GridLayout>
</RelativeLayout>
